...
                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="2F1-Ac-3h9">
                                                <rect key="frame" x="0.0" y="0.0" width="334" height="76"/>
                                                <subviews>
                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="gpU-mb-4Hg">
                                                        <rect key="frame" x="0.0" y="0.0" width="334" height="76"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vbZ-tz-5Lw">
                                                                <rect key="frame" x="0.0" y="0.0" width="334" height="34"/>
                                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
                                                                <textInputTraits key="textInputTraits" textContentType="username"/>
                                                            </textField>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ziu-1X-vau">
                                                                <rect key="frame" x="0.0" y="42" width="334" height="34"/>
                                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
                                                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                                            </textField>
                                                        </subviews>
                                                    </stackView>
...
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="Q4y-NF-9zH">
                                                <rect key="frame" x="0.0" y="104" width="334" height="51"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aJJ-eC-pSi">
                                                        <rect key="frame" x="195" y="0.0" width="139" height="51"/>
                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
                                                        <state key="normal" title="Go Drink!"/>
                                                        <connections>
                                                            <action selector="goDrinkButtonTapped:" destination="zH3-9r-lwd" eventType="touchUpInside" id="mK8-kr-q5I"/>
                                                        </connections>
                                                    </button>
                                                </subviews>
                                            </stackView>
...
                            <constraint firstItem="HqS-R7-oVe" firstAttribute="bottom" secondItem="bvP-Eb-A1v" secondAttribute="bottom" constant="32" id="ONY-kE-TDj"/>
                            <constraint firstItem="HqS-R7-oVe" firstAttribute="trailing" secondItem="bvP-Eb-A1v" secondAttribute="trailing" constant="32" id="u0f-ql-8RJ"/>
                            <constraint firstItem="bvP-Eb-A1v" firstAttribute="leading" secondItem="HqS-R7-oVe" secondAttribute="leading" constant="32" id="vtx-NH-0z8"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="HqS-R7-oVe"/>
                    </view>
                    <navigationItem key="navigationItem" title="My Beer" id="vo4-U1-IM1">
                        <barButtonItem key="rightBarButtonItem" title="Sign Out" id="WET-Gk-eag">
                            <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                            <connections>
                                <action selector="signOutButtonTapped:" destination="RVb-Xc-ABZ" id="tVs-0J-xWU"/>
                            </connections>
                        </barButtonItem>
...
